# ARISP

./: .firebaserc  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  firebase.json  package-lock.json
.ai/: architecture.md  coding-rules.md  context.md  glossary.md  tasks.md
.claude/: settings.json
.claude/hooks/: arch-guard.mjs  bash-guard.mjs  format.mjs  secret-guard.mjs  tasks-reminder.mjs
.firebase/: hosting.ZnJvbnRlbmRcZGlzdA.cache  hosting.cHVibGlj.cache
.tools/antigravity/: rules.md
backend/: ARISP.sln
backend/ARISP.API/: ARISP.API.csproj  (+5 more)
docker/: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml
docs/: evaluation_api_documentation.md  function-screen-list.md  hr-review-portal_api_documentation.md  job_api_documentation.md
frontend/: .env.example  .eslintrc.cjs  .prettierignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
nginx/: nginx.conf
public/: 404.html  index.html
rag-service/: .dockerignore  .gitignore  README.md  pyproject.toml
rag-service/app/: __init__.py  config.py  main.py
rag-service/app/api/: ingest.py  interview.py  retrieve.py
rag-service/app/core/: db.py  embeddings.py  llm.py
rag-service/app/prompts/: __init__.py
rag-service/app/rag/: chunker.py  graph.py  ingest.py  retriever.py
rag-service/app/schemas/: __init__.py
rag-service/app/services/: interview_service.py
rag-service/scripts/: smoke-test.ps1
rag-service/tests/: test_chunker.py  test_embeddings.py  test_retriever.py  test_schemas.py
supabase/: config.toml
(+395 files in other folders)
